<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".Login">



    <TextView
        android:id="@+id/todolistLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/bungee_inline"
        android:text="ToDoList"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="236dp"
        android:layout_height="221dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/loginView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icon"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerView"
        android:layout_width="288dp"
        android:layout_height="424dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_container"
        android:elevation="18dp"

        android:padding="16dp"
        android:translationX="1000dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todolistLabel">


        <TextView
            android:id="@+id/registerNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="Nombre"
            android:textColor="@color/blue_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/registerNameBox"
            android:layout_width="251dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border"
            android:backgroundTint="#FFFFFF"
            android:elevation="4dp"
            android:ems="10"
            android:hint="Introduce tu nombre"
            android:padding="4dp"
            android:textColor="#B9425E65"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerNameLabel"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/registerEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/email"
            android:textColor="@color/blue_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.039"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerNameBox" />

        <EditText
            android:id="@+id/registerEmailBox"
            android:layout_width="251dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border"
            android:backgroundTint="#FFFFFF"
            android:elevation="4dp"
            android:ems="10"
            android:hint="@string/introduce_tu_email"
            android:inputType="textEmailAddress"
            android:padding="4dp"
            android:textColor="#B9425E65"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailLabel"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/registerPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/password"
            android:textColor="@color/blue_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailBox" />

        <EditText
            android:id="@+id/registerPasswordBox"
            android:layout_width="251dp"
            android:layout_height="43dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_border"
            android:backgroundTint="#FFFFFF"
            android:elevation="4dp"
            android:ems="10"
            android:hint="@string/introduce_tu_contrase_a"
            android:inputType="textPassword"
            android:padding="4dp"

            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordLabel"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="251dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_style"
            android:text="Register"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordBox" />

        <TextView
            android:id="@+id/logeateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:text="¿Ya tienes cuenta? "
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerButton" />

        <TextView
            android:id="@+id/logeateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/logeate_aqu"
            android:textColor="@color/blue_500"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/logeateLabel"
            app:layout_constraintTop_toBottomOf="@+id/registerButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginView"
        android:layout_width="288dp"

        android:layout_height="424dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_container"

        android:elevation="18dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todolistLabel"
        tools:ignore="TextSizeCheck">


        <EditText
            android:id="@+id/emailBox"
            android:layout_width="248dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_border"
            android:backgroundTint="#FFFFFF"
            android:elevation="4dp"
            android:ems="10"
            android:hint="@string/introduce_tu_email"
            android:inputType="textEmailAddress"
            android:padding="4dp"
            android:textColor="#B9425E65"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/email"
            android:textColor="@color/blue_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto"
            android:text="@string/password"
            android:textColor="@color/blue_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailBox" />

        <EditText
            android:id="@+id/passwordBox"
            android:layout_width="248dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_border"
            android:backgroundTint="#FFFFFF"
            android:elevation="4dp"
            android:ems="10"
            android:hint="@string/introduce_tu_contrase_a"

            android:inputType="textPassword"
            android:padding="4dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.368"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="251dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_style"

            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordBox" />

        <TextView
            android:id="@+id/registrateLabel"
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/roboto"
            android:text="¿No tienes cuenta? "
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/registrateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/registrate_aqu"
            android:textColor="@color/blue_500"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/registrateLabel"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>